--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "express": "^4.17.1",
-    "chrome-aws-lambda": "latest"
+    "chrome-aws-lambda": "latest",
+    "puppeteer": "latest"
   }
 }
